--- a/plugin.yml
+++ b/plugin.yml
@@ -2,7 +2,7 @@
 name: BrawlPVP
 main: BrawlPVP\Main
 version: 1.0.0
-api: [1.12.0]
+api: 4.0.0
 author: MrReskill,TutoGamerWalid
 authors: [MrReskill,TutoGamerWalid]
 load: STARTUP
